# macdylibbundler

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  makefile
src/: Dependency.cpp  Dependency.h  DylibBundler.cpp  DylibBundler.h  Settings.cpp  Settings.h  Utils.cpp  Utils.h  main.cpp
tests/: link_boost_filesystem.cpp
